--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">DuckHuntGame</string>
+    <string name="nuevo_juego">Nuevo Juego</string>
+    <string name="jugar_online">Jugar Online</string>
+    <string name="salir">Salir</string>
 </resources>
